# fakke-insights

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
dags/: generate_upload_users.py
src/backend/: create_athena_table.py  dashboard.py  etl.py
src/backend/api/: endpoints.py
