[tool.poetry]
name = "fakke-insights"
version = "0.1.0"
description = "Data pipeline for generating and processing fake data"
authors = ["Your Name <your.email@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
apache-airflow = "2.6.3"
boto3 = "1.34.34"
faker = "22.6.0"
pandas = "2.2.0"
psycopg2-binary = "2.9.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
